# CustomTkinter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  MANIFEST.in  Readme.md  Readme_pypi.md  StockmanPython Code  aishatkinter  complex_example.py  complex_example_other style.py  complex_example_other_style.py  ctk_hdivider.py  ctk_vdivider.py  dev-proces.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  simple_test.py  simple_test_images.py
customtkinter/: __init__.py  appearance_mode_tracker.py  appearance_mode_tracker_old.py  ctk_draw_engine.py  ctk_settings.py  customtkinter_base_class.py  customtkinter_button.py  customtkinter_canvas.py  customtkinter_checkbox.py  customtkinter_color_manager.py  customtkinter_dialog.py  customtkinter_draw_engine.py  customtkinter_entry.py  customtkinter_frame.py  customtkinter_input_dialog.py  customtkinter_label.py  customtkinter_progressbar.py  customtkinter_radiobutton.py  customtkinter_settings.py  customtkinter_slider.py  customtkinter_switch.py  customtkinter_theme_manager.py  customtkinter_tk.py  customtkinter_toplevel.py  draw_engine.py  font_manager.py  scaling_tracker.py  settings.py  theme_manager.py
customtkinter/assets/themes/: blue.json  dark-blue.json  gold.json  green.json  orange.json  purple.json  sweetkind.json
customtkinter/utility/: ctk_font.py  utility_functions.py
customtkinter/widgets/: __init__.py  ctk_button.py  ctk_canvas.py  ctk_checkbox.py  ctk_combobox.py  ctk_entry.py  ctk_frame.py  ctk_input_dialog.py  ctk_label.py  ctk_menu.py  ctk_optionmenu.py  ctk_progressbar.py  ctk_radiobutton.py  ctk_scrollbar.py  ctk_scrollbar_textbox.py  ctk_segmented_button.py  ctk_slider.py  ctk_switch.py  ctk_tabview.py  ctk_textbox.py  ctk_tk.py  ctk_toplevel.py  ctk_vdivider.py  customtkinter_button.py  customtkinter_checkbox.py  customtkinter_entry.py  customtkinter_frame.py  customtkinter_input_dialog.py  customtkinter_label.py  customtkinter_progressbar.py  customtkinter_radiobutton.py  customtkinter_slider.py  customtkinter_switch.py  customtkinter_tk.py  customtkinter_toplevel.py  dropdown_menu.py  dropdown_menu_fallback.py  widget_base_class.py  widget_helper_functions.py
customtkinter/widgets/core_rendering/: draw_engine.py
customtkinter/widgets/core_widget_classes/: appearance_mode_base_class.py  dropdown_menu.py  widget_base_class.py
customtkinter/widgets/font/: ctk_font.py
customtkinter/windows/: __init__.py  ctk_alert_dialog.py  ctk_confirmation_box.py  ctk_confirmation_dialog.py  ctk_file_dialog.py  ctk_input_dialog.py  ctk_path_dialog.py  ctk_tk.py  ctk_tooltip.py  ctk_toplevel.py  icon.py
customtkinter/windows/widgets/: __init__.py  ctk_button.py  ctk_checkbox.py  ctk_combobox.py  ctk_entry.py  ctk_frame.py  ctk_label.py  ctk_meter.py  ctk_optionmenu.py  ctk_progressbar.py  ctk_radiobutton.py  ctk_scrollable_frame.py  ctk_scrollbar.py  ctk_segmented_button.py  ctk_segmented_vertical_button.py  ctk_slider.py  ctk_spinbox.py  ctk_switch.py  ctk_tabview.py  ctk_textbox.py  zoomable_label.py
customtkinter/windows/widgets/appearance_mode/: __init__.py  appearance_mode_base_class.py  appearance_mode_tracker.py
examples/: ThemeMaker.py  complex_example.py  complex_example_custom_colors.py  complex_example_new.py  complex_example_other_style.py  confBox_example.py  ctk_filedialog.py  ctk_pathdialog.PY  enable_disable_button_example.py  example_background_image.py  example_button_images.py  example_settings.py  image_example.py  scrollable_frame_example.py  simple_example.py  simple_example_images.py  simple_example_standard_tkinter.py
examples/Sign in and Sign up forms/: LICENSE  README
examples/Sign in and Sign up forms/Program/: main.py
examples/full-fledged-dictionary/: dictionarymethods.py  main.py
test/: changing_bg.py  complete_test.py  font_rendering.py  grid_system_test.py  simple_example_standard_tkinter.py  test_askdialog.py  test_button_antialiasing.py  test_ctk_toplevel.py  test_iconify_destroy.py  test_new_menu_design.py  test_simple_font_circle.py  test_string_dialog.py  test_ttk_frames.py  tkinter_variables_test.py  toplevel_test.py
test/manual_integration_tests/: complex_example_new.py  test_all_widgets_with_colors.py  test_askdialog.py  test_button_antialiasing.py  test_checkbox_text_side.py  test_combobox.py  test_configure_dimensions.py  test_ctk_toplevel.py  test_filedialog.py  test_font.py  test_iconify_destroy.py  test_images.py  test_new_menu_design.py  test_optionmenu.py  test_optionmenu_combobox.py  test_progressbar_intermediate_mode.py  test_relief.py  test_scrollable_frame.py  test_scrollbar.py  test_segmented_button.py  test_states.py  test_string_dialog.py  test_tabview.py  test_textbox.py  test_theme colors.py  test_theme_colors.py  test_tk_variables.py  test_ttk_frames.py  test_variables.py  test_vertical_widgets.py  test_widget_states.py  test_window_geometry.py  text_entry_placeholder.py
test/manual_integration_tests/test_ctk_behavior/: test_ctk_iconify_at_beginning.py  test_ctk_withdraw_at_beginning.py  test_ctk_zoomed_state.py
test/manual_integration_tests/test_ctk_toplevel_behavior/: test_ctk_toplevel_appearance_mode_change.py  test_ctk_toplevel_iconify_at_beginning.py  test_ctk_toplevel_withdraw_at_beginning.py  test_ctk_toplevel_zoomed_state.py
test/manual_integration_tests/test_ctk_window_behavior/: test_ctk_appearance_mode_change.py
test/manual_integration_tests/test_scaling/: simple_example.py  test_scaling_simple_place.py  test_scaling_toplevel_pack.py
test/manual_integration_tests/test_window_behavior/: test_ctk_appearance_mode_change.py
test/test_scaling/: complex_example.py  example_background_image.py  simple_example.py
test/unit_tests/: test_all.py  test_ctk.py  test_ctk_button.py  test_ctk_entry.py  test_ctk_toplevel.py
test/visual_tests/: test_iconify_destroy.py
test/visual_tests/test_scaling/: simple_example.py
(+22 files in other folders)
