[metadata]
name = customtkinter
version = 5.1.2
description = Create modern looking GUIs with Python
long_description = A modern and customizable python UI-library based on Tkinter: https://github.com/TomSchimansky/CustomTkinter
long_description_content_type = text/markdown
url = https://github.com/TomSchimansky/CustomTkinter
author = Tom Schimansky
license = Creative Commons Zero v1.0 Universal
license_file = LICENSE
classifiers =
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.7
packages =
    customtkinter
    customtkinter.windows
    customtkinter.windows.widgets
    customtkinter.windows.widgets.appearance_mode
    customtkinter.windows.widgets.core_rendering
    customtkinter.windows.widgets.core_widget_classes
    customtkinter.windows.widgets.font
    customtkinter.windows.widgets.image
    customtkinter.windows.widgets.scaling
    customtkinter.windows.widgets.theme
    customtkinter.windows.widgets.utility
install_requires =
    darkdetect
    typing_extensions; python_version<="3.7"
include_package_data = True
