[metadata]
name = customtkinter
version = 5.1.2
description = Create modern looking GUIs with Python
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/TomSchimansky/CustomTkinter
author = Tom Schimansky
license = MIT
license_file = LICENSE
classifiers =
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    customtkinter
    customtkinter.windows
    customtkinter.windows.widgets
    customtkinter.windows.widgets.appearance_mode
    customtkinter.windows.widgets.core_rendering
    customtkinter.windows.widgets.core_widget_classes
    customtkinter.windows.widgets.font
    customtkinter.windows.widgets.image
    customtkinter.windows.widgets.scaling
    customtkinter.windows.widgets.theme
    customtkinter.windows.widgets.utility
install_requires =
    darkdetect
    typing-extensions;python_version=="3.7"
python_requires = >=3.7
include_package_data = True
